--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -43,33 +43,33 @@
 
 	"block.mubble.dark_prismarine_wall": "Donkereprismarien muur",
 
-	"//block.mubble.oak_wood_stairs": "Oak Wood Stairs",
-	"//block.mubble.spruce_wood_stairs": "Spruce Wood Stairs",
-	"//block.mubble.birch_wood_stairs": "Birch Wood Stairs",
-	"//block.mubble.jungle_wood_stairs": "Jungle Wood Stairs",
-	"//block.mubble.acacia_wood_stairs": "Acacia Wood Stairs",
-	"//block.mubble.dark_oak_wood_stairs": "Dark Oak Wood Stairs",
+	"block.mubble.oak_wood_stairs": "Eikenhouten trap",
+	"block.mubble.spruce_wood_stairs": "Sparrehouten trap",
+	"block.mubble.birch_wood_stairs": "Berkenhouten trap",
+	"block.mubble.jungle_wood_stairs": "Oerwoudhouten trap",
+	"block.mubble.acacia_wood_stairs": "Acaciahouten trap",
+	"block.mubble.dark_oak_wood_stairs": "Donkereikenhouten trap",
 	
-	"//block.mubble.oak_wood_slab": "Oak Wood Slab",
-	"//block.mubble.spruce_wood_slab": "Spruce Wood Slab",
-	"//block.mubble.birch_wood_slab": "Birch Wood Slab",
-	"//block.mubble.jungle_wood_slab": "Jungle Wood Slab",
-	"//block.mubble.acacia_wood_slab": "Acacia Wood Slab",
-	"//block.mubble.dark_oak_wood_slab": "Dark Oak Wood Slab",
+	"block.mubble.oak_wood_slab": "Eikenhouten plaat",
+	"block.mubble.spruce_wood_slab": "Sparrehouten plaat",
+	"block.mubble.birch_wood_slab": "Berkenhouten plaat",
+	"block.mubble.jungle_wood_slab": "Oerwoudhouten plaat",
+	"block.mubble.acacia_wood_slab": "Acaciahouten plaat",
+	"block.mubble.dark_oak_wood_slab": "Donkereikenhouten plaat",
 
-	"//block.mubble.oak_wood_vertical_slab": "Oak Wood Vertical Slab",
-	"//block.mubble.spruce_wood_vertical_slab": "Spruce Wood Vertical Slab",
-	"//block.mubble.birch_wood_vertical_slab": "Birch Wood Vertical Slab",
-	"//block.mubble.jungle_wood_vertical_slab": "Jungle Wood Vertical Slab",
-	"//block.mubble.acacia_wood_vertical_slab": "Acacia Wood Vertical Slab",
-	"//block.mubble.dark_oak_wood_vertical_slab": "Dark Oak Wood Vertical Slab",
+	"block.mubble.oak_wood_vertical_slab": "Eikenhouten verticale plaat",
+	"block.mubble.spruce_wood_vertical_slab": "Sparrehouten verticale plaat",
+	"block.mubble.birch_wood_vertical_slab": "Berkenhouten verticale plaat",
+	"block.mubble.jungle_wood_vertical_slab": "Oerwoudhouten verticale plaat",
+	"block.mubble.acacia_wood_vertical_slab": "Acaciahouten verticale plaat",
+	"block.mubble.dark_oak_wood_vertical_slab": "Donkereikenhouten verticale plaat",
 
-	"//block.mubble.oak_wood_button": "Oak Wood Button",
-	"//block.mubble.spruce_wood_button": "Spruce Wood Button",
-	"//block.mubble.birch_wood_button": "Birch Wood Button",
-	"//block.mubble.jungle_wood_button": "Jungle Wood Button",
-	"//block.mubble.acacia_wood_button": "Acacia Wood Button",
-	"//block.mubble.dark_oak_wood_button": "Dark Oak Wood Button",
+	"block.mubble.oak_wood_button": "Eikenhouten knop",
+	"block.mubble.spruce_wood_button": "Sparrehouten knop",
+	"block.mubble.birch_wood_button": "Berkenhouten knop",
+	"block.mubble.jungle_wood_button": "Oerwoudhouten knop",
+	"block.mubble.acacia_wood_button": "Acaciahouten knop",
+	"block.mubble.dark_oak_wood_button": "Donkereikenhouten knop",
 
 	"block.mubble.oak_leaf_pile": "Eikenbladeren hoop",
 	"block.mubble.spruce_leaf_pile": "Sparrebladeren hoop",
@@ -118,10 +118,10 @@
 	"block.mubble.cherry_oak_fence_gate": "Kerseneikhouten poort",
 	"block.mubble.cherry_oak_fence": "Kerseneikhouten hek",
 	"block.mubble.cherry_oak_door": "Kerseneikhouten deur",
-	"//block.mubble.cherry_oak_wood_stairs": "Cherry Oak Wood Stairs",
-	"//block.mubble.cherry_oak_wood_slab": "Cherry Oak Wood Slab",
-	"//block.mubble.cherry_oak_wood_vertical_slab": "Cherry Oak Wood Vertical Slab",
-	"//block.mubble.cherry_oak_wood_button": "Cherry Oak Wood Button",
+	"block.mubble.cherry_oak_wood_stairs": "Kerseneikhouten trap",
+	"block.mubble.cherry_oak_wood_slab": "Kerseneikhouten plaat",
+	"block.mubble.cherry_oak_wood_vertical_slab": "Kerseneikhouten verticale plaat",
+	"block.mubble.cherry_oak_wood_button": "Kerseneikhouten knop",
 	
 	"block.mubble.palm_planks": "Palmhouten planken",
 	"block.mubble.palm_sapling": "Palmkiemplant",
@@ -140,10 +140,10 @@
 	"block.mubble.palm_fence_gate": "Palmhouten poort",
 	"block.mubble.palm_fence": "Palmhouten hek",
 	"block.mubble.palm_door": "Palmhouten deur",
-	"//block.mubble.palm_wood_stairs": "Palm Wood Stairs",
-	"//block.mubble.palm_wood_slab": "Palm Wood Slab",
-	"//block.mubble.palm_wood_vertical_slab": "Palm Wood Vertical Slab",
-	"//block.mubble.palm_wood_button": "Palm Wood Button",
+	"block.mubble.palm_wood_stairs": "Palmhouten trap",
+	"block.mubble.palm_wood_slab": "Palmhouten plaat",
+	"block.mubble.palm_wood_vertical_slab": "Palmhouten verticale plaat",
+	"block.mubble.palm_wood_button": "Palmhouten knop",
 
 	"block.mubble.blue_bricks": "Blauwe bakstenen",
 	"block.mubble.light_blue_bricks": "Lichtblauwe bakstenen",
@@ -627,14 +627,14 @@
 	"block.mubble.silver_shiny_garland": "Zilvere glanzende slinger",
 	"block.mubble.gold_shiny_garland": "Goude glanzende slinger",
 
-	"//block.mubble.white_present": "White Present",
-	"//block.mubble.black_present": "Black Present",
+	"block.mubble.white_present": "Wit cadeau",
+	"block.mubble.black_present": "Zwart cadeau",
 	"block.mubble.blue_present": "Blauw cadeau",
 	"block.mubble.green_present": "Groen cadeau",
 	"block.mubble.yellow_present": "Geel cadeau",
 	"block.mubble.red_present": "Rood cadeau",
-	"//block.mubble.purple_present": "Purple Present",
-	"//block.mubble.golden_present": "Golden Present",
+	"block.mubble.purple_present": "Paars cadeau",
+	"block.mubble.golden_present": "Goud cadeau",
 
 	"block.mubble.footblock": "Voetblok",
 	
@@ -823,7 +823,7 @@
 
 	"block.mubble.blue_mushroom_block": "Blauw paddenstoelenblok",
 	"block.mubble.light_blue_mushroom_block": "Lichtblauw paddenstoelenblok",
-	"block.mubble.cyan_mushroom_block": "Turquois paddenstoelenblok",
+	"block.mubble.cyan_mushroom_block": "Turquoise paddenstoelenblok",
 	"block.mubble.green_mushroom_block": "Groen paddenstoelenblok",
 	"block.mubble.lime_mushroom_block": "Lichtgroen paddenstoelenblok",
 	"block.mubble.yellow_mushroom_block": "Geel paddenstoelenblok",
@@ -842,7 +842,7 @@
 
 	"block.mubble.blue_tetris_block": "Blauw Tetris blok",
 	"block.mubble.light_blue_tetris_block": "Lichtblauw Tetris blok",
-	"block.mubble.cyan_tetris_block": "Turquois Tetris blok",
+	"block.mubble.cyan_tetris_block": "Turquoise Tetris blok",
 	"block.mubble.green_tetris_block": "Groen Tetris blok",
 	"block.mubble.lime_tetris_block": "Lichtgroen Tetris blok",
 	"block.mubble.yellow_tetris_block": "Geel Tetris blok",
@@ -890,7 +890,7 @@
 
 
 	"block.mubble.green_hill_grass_block": "Groeneheuvel grasblok",
-	"block.mubble.green_hill_dirt": "Groeneheuvel gras",
+	"block.mubble.green_hill_dirt": "Groeneheuvel aarde",
 	"block.mubble.marble_zone_stone": "Marblezone steen",
 	"block.mubble.yellow_studiopolis_clapper": "Gele studiopolisklepel",
 	"block.mubble.blue_studiopolis_clapper": "Blauwe studiopolisklepel",
@@ -915,10 +915,10 @@
 	"block.mubble.press_garden_fence_gate": "Perstuin poort",
 	"block.mubble.press_garden_fence": "Perstuin hek",
 	"block.mubble.press_garden_door": "Perstuin deur",
-	"//block.mubble.press_garden_wood_stairs": "Press Garden Wood Stairs",
-	"//block.mubble.press_garden_wood_slab": "Press Garden Wood Slab",
-	"//block.mubble.press_garden_wood_vertical_slab": "Press Garden Wood Vertical Slab",
-	"//block.mubble.press_garden_wood_button": "Press Garden Wood Button",
+	"block.mubble.press_garden_wood_stairs": "Perstuin houten trap",
+	"block.mubble.press_garden_wood_slab": "Perstuin houten plaat",
+	"block.mubble.press_garden_wood_vertical_slab": "Perstuin houten verticale plaat",
+	"block.mubble.press_garden_wood_button": "Perstuin houten knop",
 	
 	"block.mubble.spring": "Veer",
 
@@ -940,10 +940,10 @@
 	"block.mubble.scarlet_fence_gate": "Scharlakehouten poort",
 	"block.mubble.scarlet_fence": "Scharlakehouten hek",
 	"block.mubble.scarlet_door": "Scharlakehouten duur",
-	"//block.mubble.scarlet_wood_stairs": "Scarlet Wood Stairs",
-	"//block.mubble.scarlet_wood_slab": "Scarlet Wood Slab",
-	"//block.mubble.scarlet_wood_vertical_slab": "Scarlet Wood Vertical Slab",
-	"//block.mubble.scarlet_wood_button": "Scarlet Wood Button",
+	"block.mubble.scarlet_wood_stairs": "Scharlakehouten trap",
+	"block.mubble.scarlet_wood_slab": "Scharlakehouten plaat",
+	"block.mubble.scarlet_wood_vertical_slab": "Scharlakehouten verticale plaat",
+	"block.mubble.scarlet_wood_button": "Scharlakehouten knop",
 	"block.mubble.scarlet_mushroom": "Scharlake paddenstoel",
 	"block.mubble.scarlet_orchid": "Scharlake orchidee",
 
@@ -1011,39 +1011,39 @@
 	"block.mubble.potted_scarlet_orchid": "Gepotte scharlake orchidee",
 	"block.mubble.potted_potato_flower": "Gepotte aardappelbloem",
 
-	"//block.minecraft.banner.star.blue": "Blue Star",
-	"//block.minecraft.banner.star.light_blue": "Light Blue Star",
-	"//block.minecraft.banner.star.cyan": "Cyan Star",
-	"//block.minecraft.banner.star.green": "Green Star",
-	"//block.minecraft.banner.star.lime": "Lime Star",
-	"//block.minecraft.banner.star.yellow": "Yellow Star",
-	"//block.minecraft.banner.star.orange": "Orange Star",
-	"//block.minecraft.banner.star.red": "Red Star",
-	"//block.minecraft.banner.star.pink": "Pink Star",
-	"//block.minecraft.banner.star.magenta": "Magenta Star",
-	"//block.minecraft.banner.star.purple": "Purple Star",
-	"//block.minecraft.banner.star.brown": "Brown Star",
-	"//block.minecraft.banner.star.white": "White Star",
-	"//block.minecraft.banner.star.light_gray": "Light Gray Star",
-	"//block.minecraft.banner.star.gray": "Gray Star",
-	"//block.minecraft.banner.star.black": "Black Star",
+	"block.minecraft.banner.star.blue": "Blauwe ster",
+	"block.minecraft.banner.star.light_blue": "Lichblauwe ster",
+	"block.minecraft.banner.star.cyan": "Turquoise ster",
+	"block.minecraft.banner.star.green": "Groene ster",
+	"block.minecraft.banner.star.lime": "Lichtgroene ster",
+	"block.minecraft.banner.star.yellow": "Gele ster",
+	"block.minecraft.banner.star.orange": "Oranje ster",
+	"block.minecraft.banner.star.red": "Rode ster",
+	"block.minecraft.banner.star.pink": "Roze ster",
+	"block.minecraft.banner.star.magenta": "Magenta ster",
+	"block.minecraft.banner.star.purple": "Paarse ster",
+	"block.minecraft.banner.star.brown": "Bruine ster",
+	"block.minecraft.banner.star.white": "Witte ster",
+	"block.minecraft.banner.star.light_gray": "Lichtgrijze ster",
+	"block.minecraft.banner.star.gray": "Grijze ster",
+	"block.minecraft.banner.star.black": "Zwarte ster",
 
-	"//block.minecraft.banner.smash_ball.blue": "Blue Smash Ball",
-	"//block.minecraft.banner.smash_ball.light_blue": "Light Blue Smash Ball",
-	"//block.minecraft.banner.smash_ball.cyan": "Cyan Smash Ball",
-	"//block.minecraft.banner.smash_ball.green": "Green Smash Ball",
-	"//block.minecraft.banner.smash_ball.lime": "Lime Smash Ball",
-	"//block.minecraft.banner.smash_ball.yellow": "Yellow Smash Ball",
-	"//block.minecraft.banner.smash_ball.orange": "Orange Smash Ball",
-	"//block.minecraft.banner.smash_ball.red": "Red Smash Ball",
-	"//block.minecraft.banner.smash_ball.pink": "Pink Smash Ball",
-	"//block.minecraft.banner.smash_ball.magenta": "Magenta Smash Ball",
-	"//block.minecraft.banner.smash_ball.purple": "Purple Smash Ball",
-	"//block.minecraft.banner.smash_ball.brown": "Brown Smash Ball",
-	"//block.minecraft.banner.smash_ball.white": "White Smash Ball",
-	"//block.minecraft.banner.smash_ball.light_gray": "Light Gray Smash Ball",
-	"//block.minecraft.banner.smash_ball.gray": "Gray Smash Ball",
-	"//block.minecraft.banner.smash_ball.black": "Black Smash Ball",
+	"block.minecraft.banner.smash_ball.blue": "Blauwe smashbal",
+	"block.minecraft.banner.smash_ball.light_blue": "Lichtblauwe smashbal",
+	"block.minecraft.banner.smash_ball.cyan": "Turquoise smashbal",
+	"block.minecraft.banner.smash_ball.green": "Groene smashbal",
+	"block.minecraft.banner.smash_ball.lime": "Lichtgroene smashbal",
+	"block.minecraft.banner.smash_ball.yellow": "Gele smashbal",
+	"block.minecraft.banner.smash_ball.orange": "Oranje smashbal",
+	"block.minecraft.banner.smash_ball.red": "Rode smashbal",
+	"block.minecraft.banner.smash_ball.pink": "Roze smashbal",
+	"block.minecraft.banner.smash_ball.magenta": "Magenta smashbal",
+	"block.minecraft.banner.smash_ball.purple": "Paarse smashbal",
+	"block.minecraft.banner.smash_ball.brown": "Bruine smashbal",
+	"block.minecraft.banner.smash_ball.white": "Witte smashbal",
+	"block.minecraft.banner.smash_ball.light_gray": "Lichtgrijze smashbal",
+	"block.minecraft.banner.smash_ball.gray": "Grijze smashbal",
+	"block.minecraft.banner.smash_ball.black": "Zwarte smashbal",
 
 
 
@@ -1081,16 +1081,16 @@
 	"item.mubble.jingle_bells": "Jingle bellen",
 	"item.mubble.small_bulb": "Kleine lamp",
 	"item.mubble.totem_of_ascending": "Totem der opstijging",
-	"//item.mubble.star_banner_pattern": "Banner Pattern",
-	"//item.mubble.star_banner_pattern.desc": "Star",
-	"//item.mubble.smash_ball_banner_pattern": "Banner Pattern",
-	"//item.mubble.smash_ball_banner_pattern.desc": "Smash Ball",
+	"item.mubble.star_banner_pattern": "Banierpatroon",
+	"item.mubble.star_banner_pattern.desc": "Ster",
+	"item.mubble.smash_ball_banner_pattern": "Banierpatroon",
+	"item.mubble.smash_ball_banner_pattern.desc": "Smashball",
 
 
 	"item.mubble.super_mushroom": "Super paddenstoel",
 	"item.mubble.peach": "Perzik",
-	"//item.mubble.fireball": "Fireball",
-	"//item.mubble.iceball": "Iceball",
+	"item.mubble.fireball": "Vuurbal",
+	"item.mubble.iceball": "IJsbal",
 	"item.mubble.cape_feather": "Cape veer",
 	"item.mubble.super_cape_feather": "Supercape veer",
 	"item.mubble.super_star": "Super ster",
@@ -1106,22 +1106,22 @@
 	"item.mubble.smash_ball": "Smash bal",
 
 
-	"//item.mubble.white_lightsaber": "White Lightsaber",
-	"//item.mubble.light_gray_lightsaber": "Light Gray Lightsaber",
-	"//item.mubble.gray_lightsaber": "Gray Lightsaber",
-	"//item.mubble.black_lightsaber": "Black Lightsaber",
-	"//item.mubble.brown_lightsaber": "Brown Lightsaber",
-	"//item.mubble.red_lightsaber": "Red Lightsaber",
-	"//item.mubble.orange_lightsaber": "Orange Lightsaber",
-	"//item.mubble.yellow_lightsaber": "Yellow Lightsaber",
-	"//item.mubble.lime_lightsaber": "Lime Lightsaber",
-	"//item.mubble.green_lightsaber": "Green Lightsaber",
-	"//item.mubble.cyan_lightsaber": "Cyan Lightsaber",
-	"//item.mubble.light_blue_lightsaber": "Light Blue Lightsaber",
-	"//item.mubble.blue_lightsaber": "Blue Lightsaber",
-	"//item.mubble.purple_lightsaber": "Purple Lightsaber",
-	"//item.mubble.magenta_lightsaber": "Magenta Lightsaber",
-	"//item.mubble.pink_lightsaber": "Pink Lightsaber",
+	"item.mubble.white_lightsaber": "Wit lichtzwaard",
+	"item.mubble.light_gray_lightsaber": "Lichtgrijs lichtzwaard",
+	"item.mubble.gray_lightsaber": "Grijs lichtzwaard",
+	"item.mubble.black_lightsaber": "Zwart lichtzwaard",
+	"item.mubble.brown_lightsaber": "Bruin lichtzwaard",
+	"item.mubble.red_lightsaber": "Rood lichtzwaard",
+	"item.mubble.orange_lightsaber": "Oranje lichtzwaard",
+	"item.mubble.yellow_lightsaber": "Geel lichtzwaard",
+	"item.mubble.lime_lightsaber": "Lichtgroen lichtzwaard",
+	"item.mubble.green_lightsaber": "Groen lichtzwaard",
+	"item.mubble.cyan_lightsaber": "Turquoise lichtzwaard",
+	"item.mubble.light_blue_lightsaber": "Lichtblauw lichtzwaard",
+	"item.mubble.blue_lightsaber": "Blauw lichtzwaard",
+	"item.mubble.purple_lightsaber": "Paars lichtzwaard",
+	"item.mubble.magenta_lightsaber": "Magenta lichtzwaard",
+	"item.mubble.pink_lightsaber": "Roze lichtzwaard",
 
 
 	"item.mubble.blank_music_disc": "Blanke muziekplaat",
@@ -1171,7 +1171,7 @@
 	"item.mubble.remix_disc_nb_harvest_hazards": "Muziekplaat",
 	"item.mubble.remix_disc_nb_sweden": "Muziekplaat",
 	"item.mubble.remix_disc_nb_waluigi_pinball": "Muziekplaat",
-	"item.mubble.remix_disc_nb_beware_the_forest_mushrooms.desc": "Super Mario RPG: Legend of the Seven Stars - Beware the bos's paddenstoels (NoteBlock Remix)",
+	"item.mubble.remix_disc_nb_beware_the_forest_mushrooms.desc": "Super Mario RPG: Legend of the Seven Stars - Beware the Forest's Mushrooms (NoteBlock Remix)",
 	"item.mubble.remix_disc_nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)",
 	"item.mubble.remix_disc_nb_fly_octo_fly.desc": "Splatoon 2 - Fly Octo Fly (NoteBlock Remix)",
 	"item.mubble.remix_disc_nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)",
@@ -1276,8 +1276,8 @@
 	"entity.mubble.chincho": "Chincho",
 	"entity.mubble.goomba": "Goomba",
 	"entity.mubble.toad": "Toad",
-	"//entity.mubble.fireball": "Fireball",
-	"//entity.mubble.iceball": "Iceball",
+	"entity.mubble.fireball": "Vuurbal",
+	"entity.mubble.iceball": "IJsbal",
 
 
 
@@ -1316,8 +1316,8 @@
 	"subtitles.mubble.entity.chincho.ambient": "Chincho praat",
 	"subtitles.mubble.entity.chincho.hurt": "Chincho heeft pijn",
 	"subtitles.mubble.entity.chincho.death": "Chincho sterft",
-	"//subtitles.mubble.entity.fireball.throw": "Fireball flies",
-	"//subtitles.mubble.entity.iceball.throw": "Iceball flies",
+	"subtitles.mubble.entity.fireball.throw": "Vuurbal vliegt",
+	"subtitles.mubble.entity.iceball.throw": "IJsbal vliegt",
 	"subtitles.mubble.entity.goomba.crush": "Goomba verpletterd",
 	"subtitles.mubble.entity.goomba.hurt": "Goomba heeft pijn",
 	"subtitles.mubble.entity.goomba.death": "Goomba sterft",
